--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>WebStudio</title>
+        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+
     </head>
     <body>
         <!-- Header-->
         <header>
             <nav>
-                <a href="">WebStudio</a>
+                <a class="logo" href="./index.html"><span class="logo-mod-color">Web</span>Studio</a>
                 <ul>
                     <li><a href="">Студия</a></li>
-                    <li><a href="">Портфолио</a></li>
+                    <li><a href="./portfolio.html">Портфолио</a></li>
                     <li><a href="">Контакты</a></li>
                 </ul>
             </nav>
@@ -109,7 +114,7 @@
         
         <!-- Footer  -->
         <footer>
-            <a href="">WebStudio</a>
+            <a class="logo" href="./index.html"><span class="logo-mod-color">Web</span>Studio</a>
             <address>
                 <ul>
                     <li><a href="https://goo.gl/maps/eCUYpjaDpkrnBJZcA">г. Киев, пр-т Леси Украинки, 26</a></li>
