--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
 
 <body>
     <!-- Header-->
+
     <header>
         <nav>
             <a class="logo" href="./index.html"><span class="logo-mod-color">Web</span>Studio</a>
@@ -30,10 +31,11 @@
         </ul>
     </header>
 
-    <!-- Main -->
-    <main>
+    
 
-    </main>
+    <!-- Main -->
+
+    <main>
         <ul>
             <li><button type="button">Все</button></li>
             <li><button type="button">Веб-сайты</button></li>
@@ -43,54 +45,57 @@
         </ul>
         <ul>
             <li>
-                <img src="./images/our-portfolio-images/img1.jpg" alt="">
+                <img src="./images/our-portfolio-images/img1.jpg" width="370" alt="Фото проекта 1">
                 <h3>Технокряк</h3>
                 <p>Веб-сайт</p>
             </li>
             <li>
-                <img src="./images/our-portfolio-images/img2.jpg" alt="">
+                <img src="./images/our-portfolio-images/img2.jpg" width="370" alt="Фото проекта 2">
                 <h3>Постер New Orlean vs Golden Star</h3>
                 <p>Дизайн</p>
             </li>
             <li>
-                <img src="./images/our-portfolio-images/img3.jpg" alt="">
+                <img src="./images/our-portfolio-images/img3.jpg" width="370" alt="Фото проекта 3">
                 <h3>Ресторан Seafood</h3>
                 <p>Приложение</p>
             </li>
             <li>
-                <img src="./images/our-portfolio-images/img4.jpg" alt="">
+                <img src="./images/our-portfolio-images/img4.jpg" width="370" alt="Фото проекта 4">
                 <h3>Проект Prime</h3>
                 <p>Маркетинг</p>
             </li>
             <li>
-                <img src="./images/our-portfolio-images/img5.jpg" alt="">
+                <img src="./images/our-portfolio-images/img5.jpg" width="370" alt="Фото проекта 5">
                 <h3>Проект Boxes</h3>
                 <p>Приложение</p>
             </li>
             <li>
-                <img src="./images/our-portfolio-images/img6.jpg" alt="">
+                <img src="./images/our-portfolio-images/img6.jpg" width="370" alt="Фото проекта 6">
                 <h3>Inspiration has no Borders</h3>
                 <p>Веб-сайт</p>
             </li>
             <li>
-                <img src="./images/our-portfolio-images/img7.jpg" alt="">
+                <img src="./images/our-portfolio-images/img7.jpg" width="370" alt="Фото проекта 7">
                 <h3>Издание Limited Edition</h3>
                 <p>Дизайн</p>
             </li>
             <li>
-                <img src="./images/our-portfolio-images/img8.jpg" alt="">
+                <img src="./images/our-portfolio-images/img8.jpg" width="370" alt="Фото проекта 8">
                 <h3>Проект LAB</h3>
                 <p>Маркетинг</p>
             </li>
             <li>
-                <img src="./images/our-portfolio-images/img9.jpg" alt="">
+                <img src="./images/our-portfolio-images/img9.jpg" width="370" alt="Фото проекта 9">
                 <h3>Growing Business</h3>
                 <p>Приложение</p>
             </li>
         </ul>
+    </main>
+
 
 
     <!-- Footer  -->
+
     <footer>
         <a class="logo" href="./index.html"><span class="logo-mod-color">Web</span>Studio</a>
         <address>
@@ -100,7 +105,6 @@
                 <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
-
     </footer>
 </body>
 
