--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,9 @@
 <body>
     <!-- Header-->
 
-    <header>
+    <header class="header">
         <nav>
-            <a class="logo" href="./index.html"><span class="logo-mod-color">Web</span>Studio</a>
+            <a class="header-logo" href="./index.html"><span class="logo-mod-color">Web</span>Studio</a>
             <ul>
                 <li><a href="">Студия</a></li>
                 <li><a href="./portfolio.html">Портфолио</a></li>
@@ -96,8 +96,8 @@
 
     <!-- Footer  -->
 
-    <footer>
-        <a class="logo" href="./index.html"><span class="logo-mod-color">Web</span>Studio</a>
+    <footer class="footer">
+        <a class="footer-logo" href="./index.html"><span class="logo-mod-color">Web</span>Studio</a>
         <address>
             <ul>
                 <li><a href="https://goo.gl/maps/eCUYpjaDpkrnBJZcA">г. Киев, пр-т Леси Украинки, 26</a></li>
