--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,7 @@
     <!-- Main -->
 
     <main>
+        <h1>Наши проекты</h1>
         <ul>
             <li><button type="button">Все</button></li>
             <li><button type="button">Веб-сайты</button></li>
