--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <header class="header">
             <nav>
                 <a class="header-logo" href="./index.html"><span class="logo-mod-color">Web</span>Studio</a>
-                <ul>
-                    <li><a href="">Студия</a></li>
-                    <li><a href="./portfolio.html">Портфолио</a></li>
-                    <li><a href="">Контакты</a></li>
+                <ul class="site-nav list">
+                    <li><a href="" class="link">Студия</a></li>
+                    <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li><a href="" class="link">Контакты</a></li>
                 </ul>
             </nav>
-            <ul>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <ul class="contacts">
+                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
             </ul>
         </header>
 
@@ -126,12 +126,12 @@
         <!-- Footer  -->
 
         <footer class="footer">
-            <a class="footer-logo" href="./index.html"><span class="logo-mod-color">Web</span>Studio</a>
+            <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
             <address>
-                <ul>
-                    <li><a href="https://goo.gl/maps/eCUYpjaDpkrnBJZcA">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a href="mailto:info@example.com">info@example.com</a></li>
-                    <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                <ul class="address list">
+                    <li><a href="https://goo.gl/maps/eCUYpjaDpkrnBJZcA" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="mailto:info@example.com" class="link">info@example.com</a></li>
+                    <li><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
                 </ul>
             </address>
            
