--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         
         <header class="header">
             <nav>
-                <a class="header-logo" href="./index.html"><span class="logo-mod-color">Web</span>Studio</a>
-                <ul class="site-nav list">
+                <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+                <ul class="site-nav">
                     <li><a href="" class="link">Студия</a></li>
                     <li><a href="./portfolio.html" class="link">Портфолио</a></li>
                     <li><a href="" class="link">Контакты</a></li>
@@ -125,13 +125,13 @@
 
         <!-- Footer  -->
 
-        <footer class="footer">
-            <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
+        <footer>
+            <a class="logo footer" href="./index.html"><span>Web</span>Studio</a>
             <address>
-                <ul class="address list">
-                    <li><a href="https://goo.gl/maps/eCUYpjaDpkrnBJZcA" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a href="mailto:info@example.com" class="link">info@example.com</a></li>
-                    <li><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
+                <ul class="address">
+                    <li><a href="https://goo.gl/maps/eCUYpjaDpkrnBJZcA" target="_blank" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="mailto:info@example.com" class="contacts link">info@example.com</a></li>
+                    <li><a href="tel:+380991111111" class="contacts link">+38 099 111 11 11</a></li>
                 </ul>
             </address>
            
