--- a/portfolio.html
+++ b/portfolio.html
@@ -37,14 +37,14 @@
 
     <main>
         <h1>Наши проекты</h1>
-        <ul>
-            <li><button type="button">Все</button></li>
-            <li><button type="button">Веб-сайты</button></li>
-            <li><button type="button">Приложения</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
+        <ul class="our-projects-button-list">
+            <li><button type="button" class="button-filter">Все</button></li>
+            <li><button type="button" class="button-filter">Веб-сайты</button></li>
+            <li><button type="button" class="button-filter">Приложения</button></li>
+            <li><button type="button" class="button-filter">Дизайн</button></li>
+            <li><button type="button" class="button-filter">Маркетинг</button></li>
         </ul>
-        <ul>
+        <ul class="our-projects-list">
             <li>
                 <img src="./images/our-portfolio-images/img1.jpg" width="370" alt="Фото проекта 1">
                 <h3>Технокряк</h3>
