--- a/portfolio.html
+++ b/portfolio.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 
 </head>
 
@@ -18,16 +18,16 @@
 
     <header class="header">
         <nav>
-            <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+            <a class="logo" href="./index.html"><span class="logo-mod-color">Web</span>Studio</a>
             <ul class="site-nav">
-                <li><a href="" class="link">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+                <li><a href="" class="site-nav-link">Студия</a></li>
+                <li><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
+                <li><a href="" class="site-nav-link">Контакты</a></li>
             </ul>
         </nav>
         <ul class="contacts">
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
         </ul>
     </header>
 
@@ -35,79 +35,83 @@
 
     <!-- Main -->
 
+    <!-- Our projects -->
+
     <main>
-        <h1>Наши проекты</h1>
-        <ul class="our-projects-button-list">
-            <li><button type="button" class="button-filter">Все</button></li>
-            <li><button type="button" class="button-filter">Веб-сайты</button></li>
-            <li><button type="button" class="button-filter">Приложения</button></li>
-            <li><button type="button" class="button-filter">Дизайн</button></li>
-            <li><button type="button" class="button-filter">Маркетинг</button></li>
-        </ul>
-        <ul class="our-projects-list">
-            <li>
-                <img src="./images/our-portfolio-images/img1.jpg" width="370" alt="Фото проекта 1">
-                <h3>Технокряк</h3>
-                <p>Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./images/our-portfolio-images/img2.jpg" width="370" alt="Фото проекта 2">
-                <h3>Постер New Orlean vs Golden Star</h3>
-                <p>Дизайн</p>
-            </li>
-            <li>
-                <img src="./images/our-portfolio-images/img3.jpg" width="370" alt="Фото проекта 3">
-                <h3>Ресторан Seafood</h3>
-                <p>Приложение</p>
-            </li>
-            <li>
-                <img src="./images/our-portfolio-images/img4.jpg" width="370" alt="Фото проекта 4">
-                <h3>Проект Prime</h3>
-                <p>Маркетинг</p>
-            </li>
-            <li>
-                <img src="./images/our-portfolio-images/img5.jpg" width="370" alt="Фото проекта 5">
-                <h3>Проект Boxes</h3>
-                <p>Приложение</p>
-            </li>
-            <li>
-                <img src="./images/our-portfolio-images/img6.jpg" width="370" alt="Фото проекта 6">
-                <h3>Inspiration has no Borders</h3>
-                <p>Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./images/our-portfolio-images/img7.jpg" width="370" alt="Фото проекта 7">
-                <h3>Издание Limited Edition</h3>
-                <p>Дизайн</p>
-            </li>
-            <li>
-                <img src="./images/our-portfolio-images/img8.jpg" width="370" alt="Фото проекта 8">
-                <h3>Проект LAB</h3>
-                <p>Маркетинг</p>
-            </li>
-            <li>
-                <img src="./images/our-portfolio-images/img9.jpg" width="370" alt="Фото проекта 9">
-                <h3>Growing Business</h3>
-                <p>Приложение</p>
-            </li>
-        </ul>
+        <section>
+            <h1>Наши проекты</h1>
+            <ul class="our-projects-button-list">
+                <li><button type="button" class="button-filter">Все</button></li>
+                <li><button type="button" class="button-filter">Веб-сайты</button></li>
+                <li><button type="button" class="button-filter">Приложения</button></li>
+                <li><button type="button" class="button-filter">Дизайн</button></li>
+                <li><button type="button" class="button-filter">Маркетинг</button></li>
+            </ul>
+            <ul class="our-projects-list">
+                <li class="our-projects-list-item">
+                    <img src="./images/our-portfolio-images/img1.jpg" width="370" alt="Фото проекта 1">
+                    <h2 class="project-title">Технокряк</h2>
+                    <p class="project-type">Веб-сайт</p>
+                </li>
+                <li class="our-projects-list-item">
+                    <img src="./images/our-portfolio-images/img2.jpg" width="370" alt="Фото проекта 2">
+                    <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="project-type">Дизайн</p>
+                </li>
+                <li class="our-projects-list-item">
+                    <img src="./images/our-portfolio-images/img3.jpg" width="370" alt="Фото проекта 3">
+                    <h2 class="project-title">Ресторан Seafood</h2>
+                    <p class="project-type">Приложение</p>
+                </li>
+                <li class="our-projects-list-item">
+                    <img src="./images/our-portfolio-images/img4.jpg" width="370" alt="Фото проекта 4">
+                    <h2 class="project-title">Проект Prime</h2>
+                    <p class="project-type">Маркетинг</p>
+                </li>
+                <li class="our-projects-list-item">
+                    <img src="./images/our-portfolio-images/img5.jpg" width="370" alt="Фото проекта 5">
+                    <h2 class="project-title">Проект Boxes</h2>
+                    <p class="project-type">Приложение</p>
+                </li>
+                <li class="our-projects-list-item">
+                    <img src="./images/our-portfolio-images/img6.jpg" width="370" alt="Фото проекта 6">
+                    <h2 class="project-title">Inspiration has no Borders</h2>
+                    <p class="project-type">Веб-сайт</p>
+                </li>
+                <li class="our-projects-list-item">
+                    <img src="./images/our-portfolio-images/img7.jpg" width="370" alt="Фото проекта 7">
+                    <h2 class="project-title">Издание Limited Edition</h2>
+                    <p class="project-type">Дизайн</p>
+                </li>
+                <li class="our-projects-list-item">
+                    <img src="./images/our-portfolio-images/img8.jpg" width="370" alt="Фото проекта 8">
+                    <h2 class="project-title">Проект LAB</h2>
+                    <p class="project-type">Маркетинг</p>
+                </li>
+                <li class="our-projects-list-item">
+                    <img src="./images/our-portfolio-images/img9.jpg" width="370" alt="Фото проекта 9">
+                    <h2 class="project-title">Growing Business</h2>
+                    <p class="project-type">Приложение</p>
+                </li>
+            </ul>
+        </section>
+        
     </main>
 
 
 
     <!-- Footer  -->
 
-    <footer>
-        <a class="logo footer" href="./index.html"><span>Web</span>Studio</a>
+    <footer class="footer">
+        <a class="logo bottom" href="./index.html"><span class="logo-mod-color">Web</span>Studio</a>
         <address>
             <ul class="address">
-                <li><a href="https://goo.gl/maps/eCUYpjaDpkrnBJZcA" target="_blank" class="link">г. Киев, пр-т Леси
+                <li><a href="https://goo.gl/maps/eCUYpjaDpkrnBJZcA" target="_blank" class="adress-location">г. Киев, пр-т Леси
                         Украинки, 26</a></li>
-                <li><a href="mailto:info@example.com" class="contacts link">info@example.com</a></li>
-                <li><a href="tel:+380991111111" class="contacts link">+38 099 111 11 11</a></li>
+                <li><a href="mailto:info@example.com" class="adress-contacts-link">info@example.com</a></li>
+                <li><a href="tel:+380991111111" class="adress-contacts-link">+38 099 111 11 11</a></li>
             </ul>
         </address>
-    
     </footer>
 </body>
 
